--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "mathlive",
-  "version": "0.98.6",
+  "name": "@Abuenameh/mathlive",
+  "version": "0.1.0",
   "description": "A web component for math input",
   "license": "MIT",
-  "funding": {
-    "type": "individual",
-    "url": "https://paypal.me/arnogourdol"
-  },
   "files": [
     "/dist"
   ],
@@ -48,9 +44,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arnog/mathlive.git"
+    "url": "git+https://github.com/Abuenameh/mathlive.git"
   },
-  "bugs": "https://github.com/arnog/mathlive/issues/",
   "scripts": {
     "doc": "bash ./scripts/update-docs.sh",
     "build": "bash ./scripts/build.sh",
