--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@Abuenameh/mathlive",
+  "name": "@abuenameh/mathlive",
   "version": "0.1.0",
   "description": "A web component for math input",
   "license": "MIT",
